--- a/Dockerfile-cpu
+++ b/Dockerfile-cpu
@@ -140,10 +140,10 @@ RUN mkdir -p /app
 WORKDIR /app
 
 # set container user
-USER $USER
+# USER $USER
 
 # Copy contents
-# COPY . /app
+COPY . /app
 
 # CMD ["sh", "init_script.sh"]
 
